Add Subject Controller

--- a/SchoolSchedule.Application/SchoolSchedule.Application.csproj
+++ b/SchoolSchedule.Application/SchoolSchedule.Application.csproj
@@ -27,7 +27,10 @@
     <Folder Include="ClassSections\Commands\" />
     <Folder Include="Grades\Command\" />
     <Folder Include="Departements\Command\" />
+    <Folder Include="JobTitles\Command\" />
     <Folder Include="SubjectAssignments\Query\" />
+    <Folder Include="Subjects\Command\" />
+    <Folder Include="Teachers\Query\" />
   </ItemGroup>
 
 </Project>
