Add GetAllSubjectAssignments API and refactor models
Introduced a new `GetAllSubjectAssignments` API endpoint in
`SubjectAssignmentsController` with pagination support. Updated
the `ISubjectAssignmentRepository` to include a `GetAllAsync`
method for fetching paginated data. Added `GetSubjectAssignmentQuery`
and its handler to encapsulate query logic.

Refactored the `GradeDto` and `TeacherAssignmentDto` classes to
align with the updated data model. Simplified the `SubjectAssignment`
entity by removing unused properties (`ClassSectionId`, `SubjectId`,
`GradeId`, etc.) and updated related mappings in `SubjectAssignmentMapper`
and `TeacherMapper`.

Created a new migration `20251002140636_FixSubjectAssignment` to
remove the `ClassSectionId` column from the `SubjectAssignments`
table, along with its foreign key and index. Updated the EF Core
model to reflect these schema changes.

Removed unused files and folders, updated project references, and
normalized file paths to use lowercase directory names. Updated
assembly information and build artifacts to reflect the changes.

--- a/SchoolSchedule.Application/SchoolSchedule.Application.csproj
+++ b/SchoolSchedule.Application/SchoolSchedule.Application.csproj
@@ -7,6 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Grades\Command\**" />
+    <Compile Remove="JobTitles\Command\**" />
+    <Compile Remove="TeacheAssignments\Query\**" />
+    <EmbeddedResource Remove="Grades\Command\**" />
+    <EmbeddedResource Remove="JobTitles\Command\**" />
+    <EmbeddedResource Remove="TeacheAssignments\Query\**" />
+    <None Remove="Grades\Command\**" />
+    <None Remove="JobTitles\Command\**" />
+    <None Remove="TeacheAssignments\Query\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="ErrorOr" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
@@ -21,13 +33,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SchoolSchedule.Domain\SchoolSchedule.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Grades\Command\" />
-    <Folder Include="JobTitles\Command\" />
-    <Folder Include="SubjectAssignments\Query\" />
-    <Folder Include="TeacheAssignments\Query\" />
   </ItemGroup>
 
 </Project>
