Add timetable creation feature and schema updates
Introduced a new API endpoint, command, and handler for creating
timetable entries. Updated the `TimeTableEntry` domain model
and database schema to support optional `SubjectAssignmentId`
and a new `Period` property with constraints. Registered the
`ITimeTableEntryRepository` and implemented its methods.

Enhanced `TeacherAssignmentRepository` to include navigation
properties. Added a migration to enforce data integrity and
updated dependency injection configuration. Updated metadata
and binaries to reflect the new version.

--- a/SchoolSchedule.Application/SchoolSchedule.Application.csproj
+++ b/SchoolSchedule.Application/SchoolSchedule.Application.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\SchoolSchedule.Domain\SchoolSchedule.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TimeTableEntries\Query\" />
+  </ItemGroup>
+
 </Project>
